--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/b0070f10f4.js"
-      crossorigin="anonymous"
-    ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css" /><script
+      src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
     <title>Nosotros</title>
   </head>
   <body>
     <!-- HEADER -->
-    <header>
+    <header class="encabezado">
+
       <div class="logo">
         <img src="../icons/logo ab vitro.jpg" alt="logo" />
-        <h1>Ab vitro: taller de oficios y artes multiples</h1>
       </div>
+
+        <h1>AB Vitro: Taller de oficios y artes múltiples</h1>
+
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="#">Nosotros</a></li>
           <li><a href="./cursos.html">Cursos</a></li>
           <li><a href="./modalidades.html">Modalidades</a></li>
@@ -31,8 +32,7 @@
     <!-- MAIN NOSOTROS -->
     <main>
       <div class="profesores">
-        <img
-          class="staff profesional"
+        <img class="profesores"
           src="../images/staff profesional.jpg"
           alt="Staff profesional"
         />
@@ -67,5 +67,8 @@
         ></a>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
   </body>
 </html>
