--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <h1 class="empresa">AB Vitro</h1>
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
               <a class="nav-link" href="./pages/cursos.html">Cursos</a>
@@ -39,9 +38,16 @@
       </nav>
     </header>
     <!-- MAIN INICIO -->
-    <main>
-      <section class="contenedor-images">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <main class="container">
+        <section class="row my-5 mx-auto justify-content-center">
+          <div class="card col-12 col-sm-6 bg-card" style="width: 18rem;">
+            <div class="card-body d-flex flex-column justify-content-center"
+            <h1 class="card-title">AB VITRO</h1>
+            <h2 class="card-subtitle mb-2 text-muted">Taller de oficios y artes múltiples</h2>
+            </div>
+          </div>
+      <!--CARROUSEL-->      
+        <div id="carouselExampleControls" class="carousel slide col-12 col-sm-6" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./images/arbol navideño.jpg" class="d-block w-100" alt="arbol-navideño">
