--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <!-- MAIN INICIO -->
     <main class="container">
         <section class="row my-5 mx-auto justify-content-center">
-          <div class="card col-12 col-sm-6 bg-card" style="width: 18rem;">
-            <div class="card-body d-flex flex-column justify-content-center"
-            <h1 class="card-title">AB VITRO</h1>
+          <div class="card col-12 col-sm-6 bg-carta" style="width: 18rem;">
+            <div class="card-body d-flex flex-column justify-content-center">
+            <h1 class="card-title ">AB VITRO</h1>
             <h2 class="card-subtitle mb-2 text-muted">Taller de oficios y artes múltiples</h2>
             </div>
           </div>
