--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -19,21 +19,29 @@
   <body>
     <!-- HEADER -->
     <header class="encabezado">
-
-      <div class="logo">
-        <img src="../icons/logo ab vitro.jpg" alt="logo" />
-      </div>
-
-  
-
-      <nav>
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./nosotros.html">Nosotros</a></li>
-          <li><a href="./cursos.html">Cursos</a></li>
-          <li><a href="./modalidades.html">Modalidades</a></li>
-          <li><a href="#">Comunicate</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="../icons/logo ab vitro.jpg" alt="logo"/></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+              <a class="nav-link" href="../pages/cursos.html">Cursos</a>
+              <a class="nav-link" href="./pages/modalidades.html">Modalidades</a>
+              <a class="nav-link active" href="#">Comunicate</a>
+            </div>
+          </div>
+        </div>
       </nav>
     </header>
 <!-- MAIN COMUNICATE -->
