--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -37,7 +37,7 @@
               <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
               <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
               <a class="nav-link" href="../pages/cursos.html">Cursos</a>
-              <a class="nav-link" href="./pages/modalidades.html">Modalidades</a>
+              <a class="nav-link" href="../pages/modalidades.html">Modalidades</a>
               <a class="nav-link active" href="#">Comunicate</a>
             </div>
           </div>
