modifico nosotros a responsive

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,14 +39,17 @@
     </header>
     <!-- MAIN NOSOTROS -->
     <main>
-      <div class="profesores">
-        <img class="profesores"
-          src="../images/staff profesional.jpg"
+      <section class="profesores">
+        <div class="staff">
+          <img src="../images/staff profesional.jpg"
           alt="Staff profesional"/>
-        <p>
-          Nuestro mensaje está dedicado a todas aquellas personas que sueñan con tener su propio taller de arte.Somos un grupo de profesoras con años de docencia y experimentación de diversas técnicas que han ido evolucionando en diversos desafíos a través de la implementación de nuevos materiales. Intentamos potenciar el espíritu creativo del alumno a través de ejercicios simples. Se trabaja con grupos reducidos, ofreciendo un aprendizaje personalizado, respetando los tiempos de cada alumno. Cada taller cuenta con un programa establecido con técnicas originarias y actualizadas cada año mediante investigación y procesos de fusión en el arte, creando técnicas de vanguardia.
-        </p>
-      </div>
+        </div>
+        <div class="descripcion-taller">
+          <p>
+            Nuestro mensaje está dedicado a todas aquellas personas que sueñan con tener su propio taller de arte.Somos un grupo de profesoras con años de docencia y experimentación de diversas técnicas que han ido evolucionando en diversos desafíos a través de la implementación de nuevos materiales. Intentamos potenciar el espíritu creativo del alumno a través de ejercicios simples. Se trabaja con grupos reducidos, ofreciendo un aprendizaje personalizado, respetando los tiempos de cada alumno. Cada taller cuenta con un programa establecido con técnicas originarias y actualizadas cada año mediante investigación y procesos de fusión en el arte, creando técnicas de vanguardia.
+          </p>
+        </div>
+      </section>
     </main>
     
     <!--FOOTER  -->
