--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,7 +46,7 @@
         </div>
         <div class="descripcion-taller">
           <p>
-            Nuestro mensaje está dedicado a todas aquellas personas que sueñan con tener su propio taller de arte.Somos un grupo de profesoras con años de docencia y experimentación de diversas técnicas que han ido evolucionando en diversos desafíos a través de la implementación de nuevos materiales. Intentamos potenciar el espíritu creativo del alumno a través de ejercicios simples. Se trabaja con grupos reducidos, ofreciendo un aprendizaje personalizado, respetando los tiempos de cada alumno. Cada taller cuenta con un programa establecido con técnicas originarias y actualizadas cada año mediante investigación y procesos de fusión en el arte, creando técnicas de vanguardia.
+            Nuestro mensaje está dedicado a todas aquellas personas que sueñan con tener su propio taller de arte. Somos un grupo de profesoras con años de docencia y experimentación en diversas técnicas que han ido evolucionando enfrentando nuevos desafíos a través de la implementación de distintos materiales. Intentamos potenciar el espíritu creativo de cada alumno a través de ejercicios simples. Trabajamos con grupos reducidos, ofreciendo un aprendizaje personalizado y respetando los tiempos de cada persona. Nuestros talleres cuentan con un programa establecido con técnicas originarias y actualizadas cada año mediante investigación y procesos de fusión en el arte, creando técnicas de vanguardia.
           </p>
         </div>
       </section>
@@ -65,8 +65,9 @@
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
           <li class="nav-item"><a href="../pages/nosotros.html" class="nav-link px-2 text-muted">Nosotros</a></li>
-          <li class="nav-item"><a href="../pages/modalidades.html" class="nav-link px-2 text-muted">Modalidades</a></li>
-          <li class="nav-item"><a href="../pages/cursos.html" class="nav-link px-2 text-muted">Cursos</a></li>        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Comunicate</a></li>
+          <li class="nav-item"><a href="../pages/modalidades.html" class="navpx-2text-muted">Modalidades<a><li></li>
+          <li class="nav-item"><a href="../pages/cursos.html" class="nav-link px-text-muted">Cursos<a><li>        
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Comunicate</a></li>
         </ul>
       </div>
     </footer>
