--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -49,13 +49,13 @@
 
   <form class= "contenedor-formulario" action="">
     <h3>Dejanos tu Mensaje</h3>
-  <div class="contenido-form">
+  <section class="contenido-form">
     <div class="form-asunto">
       <ul>
-        <li><input type="text" name="user-name" id="name" placeholder="Nombre:"></li>
-        <li><input type="tel" name="user-telefono"id="tel" placeholder="Telefono:"></li>
-        <li><input type="email" name="user-email" id="mail" placeholder="Email:"></li>
-        <li><textarea name="user-msg" id="msg" cols="40" rows="15"></textarea></li>
+        <li><input class="campo" type="text" name="user-name" id="name" placeholder="Nombre:"></li>
+        <li><input class="campo" type="tel" name="user-telefono"id="tel" placeholder="Telefono:"></li>
+        <li><input class="campo" type="email" name="user-email" id="mail" placeholder="Email:"></li>
+        <li><textarea class="campo" name="user-msg" id="msg" cols="40" rows="15"></textarea></li>
         <input type="submit" value="Enviar Mensaje">
         <input type="reset" value="Borrar Mensaje">
       </ul>
@@ -65,7 +65,7 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.4024659454353!2d-60.66176932509807!3d-32.940382071570916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab45b42a119d%3A0xf75eee098012559b!2sSan%20Lorenzo%202677%2C%20S2000KPI%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1684703849929!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-  </div>
+  </section>
   </form>
 </main>
          
