--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -45,7 +45,7 @@
       </nav>
     </header>
 <!-- MAIN COMUNICATE -->
-<main>
+<main class="main">
 
   <form class= "contenedor-formulario" action="">
     <h3>Dejanos tu Mensaje</h3>
@@ -72,7 +72,7 @@
     
     <!-- FOOTER -->
     
-    <footer>
+    <footer class="footer">
       <div class="footer-container">
         <div class="footer-redes">
           <a href=""><img src="../icons/facebook.svg" alt=""></a>
