--- a/pages/modalidades.html
+++ b/pages/modalidades.html
@@ -49,7 +49,7 @@
       </nav>
     </header>
     <!-- MAIN MODALIDADES -->
-    <main>
+    <main class="main">
       <section class="modalidades">
         <div class="modalidades-img">
           <img src="../images/modalidades.jpg" alt="modalidades-img" />
@@ -74,7 +74,7 @@
 
     <!-- FOOTER -->
 
-    <footer>
+    <footer class="footer">
       <div class="footer-container">
         <div class="footer-redes">
           <a href=""><img src="../icons/facebook.svg" alt=""></a>
