--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <!-- MAIN NOSOTROS -->
-    <main>
+    <main class="main">
       <section class="profesores">
         <div class="staff">
           <img src="../images/staff profesional.jpg"
@@ -54,7 +54,7 @@
     
     <!--FOOTER-->
     
-    <footer>
+    <footer class="footer">
       <div class="footer-container">
         <div class="footer-redes">
           <a href=""><img src="../icons/facebook.svg" alt=""></a>
