--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </header>
     
     <!-- MAIN INICIO -->
-    <main class="container">
+    <main class="main">
       <section class="row my-5 mx-auto justify-content-center">
         <div class="card col-12 col-sm-6 bg-carta" style="width: 18rem">
           <div class="card-body d-flex flex-column justify-content-center">
@@ -136,7 +136,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
+    <footer class="footer">
       <div class="footer-container">
         <div class="footer-redes">
           <a href=""><img src="./icons/facebook.svg" alt=""></a>
