--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
     <!-- MAIN CURSOS -->
-    <main class="container">
+    <main class="main">
       <section class="row my-5 mx-auto justify-content-center">
         <div class="card col-12 col-sm-6 bg-carta" style="width: 18rem;">
           <div class="card-body d-flex flex-column justify-content-center">
@@ -85,7 +85,7 @@
   
     <!-- FOOTER -->
     
-    <footer>
+    <footer class="footer">
       <div class="footer-container">
         <div class="footer-redes">
           <a href=""><img src="../icons/facebook.svg" alt=""></a>
