modifico linkeo footer

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         <div class="footer-nav">
           <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="#">Cursos</a></li>
-            <li><a href="#">Modalidades</a></li>
-            <li><a href="#">Comunicate</a></li>
+            <li><a href="./pages/nosotros.html">Nosotros</a></li>
+            <li><a href="./pages/cursos.html">Cursos</a></li>
+            <li><a href="./pages/modalidades.html">Modalidades</a></li>
+            <li><a href="./pages/comunicate.html">Comunicate</a></li>
           </ul>
         </div>
       </div>
