--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -80,10 +80,10 @@
         </div>
         <div class="footer-nav">
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="#">Cursos</a></li>
-            <li><a href="#">Modalidades</a></li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../pages/nosotros.html">Nosotros</a></li>
+            <li><a href="../pages/cursos.html">Cursos</a></li>
+            <li><a href="../pages/modalidades.html">Modalidades</a></li>
             <li><a href="#">Comunicate</a></li>
           </ul>
         </div>
