--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -48,7 +48,7 @@
 <main class="main">
 
   <form class= "contenedor-formulario" action="">
-    <h3>Dejanos tu Mensaje</h3>
+    <h1 class="titulo3">DEJANOS TU MENSAJE</h1>
   <section class="contenido-form">
     <div class="form-asunto">
       <ul>
