--- a/pages/modalidades.html
+++ b/pages/modalidades.html
@@ -50,6 +50,7 @@
     </header>
     <!-- MAIN MODALIDADES -->
     <main class="main">
+      <h1 class="titulo3">COMO TRABAJAMOS</h1>
       <section class="modalidades">
         <div class="modalidades-img">
           <img src="../images/modalidades.jpg" alt="modalidades-img" />
