--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,6 +39,7 @@
     </header>
     <!-- MAIN NOSOTROS -->
     <main class="main">
+      <h1 class="titulo3">QUIENES SOMOS</h1>
       <section class="profesores">
         <div class="staff">
           <img src="../images/staff profesional.jpg"
