--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -42,11 +42,16 @@
     </header>
     <!-- MAIN CURSOS -->
     <main class="main">
+      <section class="titulo2">
+        <h1 class="card-title">AB VITRO</h1>
+        <h2 class="card-subtitle mb-2 text-muted">
+          Taller de oficios y artes múltiples</h2>
+      </section>
       <section class="row my-5 mx-auto justify-content-center">
-        <div class="card col-12 col-sm-6 bg-carta" style="width: 18rem;">
+        <div class="card col-12 col-sm-6 bg-carta" style="width: 18rem">
           <div class="card-body d-flex flex-column justify-content-center">
-          <h1 class="card-title ">AB VITRO</h1>
-          <h2 class="card-subtitle mb-2 text-muted">Taller de oficios y artes múltiples</h2>
+            <h3 class="card-subtitle mb-2 text-muted">
+              Nuestros Cursos y Talleres</h3> 
           </div>
         </div>
     <!--CARROUSEL-->      
