agrego contenido modalidades

--- a/pages/modalidades.html
+++ b/pages/modalidades.html
@@ -71,6 +71,18 @@
           </p>
         </div>
       </section>
+      <div class="seminarios">
+      <h3>SEMINARIOS</h3>
+        <div class="cursos-cortos">
+        <p>
+        1) ESMALTES REFRACTARIOS, FUNDENTES, COLORANTES.
+        <br>
+        2) ESCAMAS E HILOS, METALES, MOSTACILLAS, VIDRIO FLOSING, MICA.
+        <br>
+        3) MOSAIQUISMO EN VITROFUSION: TRABAJOS CON PEQUEÑOS MOSAICOS.
+      </p>
+        </div>
+      </div>
     </main>
 
     <!-- FOOTER -->
