agrego contenido nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css" /><script
-      src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <!--FONTAWESOME-->
+    <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
     <title>Nosotros</title>
   </head>
   <body>
@@ -39,7 +41,7 @@
     </header>
     <!-- MAIN NOSOTROS -->
     <main class="main">
-      <h1 class="titulo3">QUIENES SOMOS</h1>
+      <h1 class="titulo2">QUIENES SOMOS</h1>
       <section class="profesores">
         <div class="staff">
           <img src="../images/staff profesional.jpg"
@@ -51,6 +53,18 @@
           </p>
         </div>
       </section>
+      <section class="servicios">
+        <h3>SERVICIOS</h3>
+          <div class="herramientas-materiales">
+          <p>
+          1) ESTE TALLER CUENTA CON HORNOS PROPIOS.
+          <br>
+          2) MOLDERIA Y HERRAMIENTAS PARA USO EN EL TALLER.
+          <br>
+          3) VENTA DE MATERIALES E INSUMOS OPCIONAL.
+        </p>
+          </div>
+        </section>
     </main>
     
     <!--FOOTER-->
@@ -72,6 +86,7 @@
         </div>
       </div>
     </footer>
+    <!--LIBRERIA BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
   </body>
