--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/b0070f10f4.js"
-      crossorigin="anonymous"
-    ></script>
+    <!--FONTAWESOME-->
+    <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
     <title>Cursos</title>
   </head>
   <body>
@@ -107,7 +106,8 @@
         </div>
       </div>
     </footer>
-
+ 
+    <!--LIBRERIA BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
   </body>
