--- a/pages/modalidades.html
+++ b/pages/modalidades.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--BOOTSTRAP-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/b0070f10f4.js"
-      crossorigin="anonymous"
-    ></script>
+    <!--FONTAWESOME-->
+    <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
     <title>Modalidades</title>
   </head>
   <body>
@@ -50,7 +46,7 @@
     </header>
     <!-- MAIN MODALIDADES -->
     <main class="main">
-      <h1 class="titulo3">COMO TRABAJAMOS</h1>
+      <h1 class="titulo2">COMO TRABAJAMOS</h1>
       <section class="modalidades">
         <div class="modalidades-img">
           <img src="../images/modalidades.jpg" alt="modalidades-img" />
@@ -71,7 +67,7 @@
           </p>
         </div>
       </section>
-      <div class="seminarios">
+      <section class="seminarios">
       <h3>SEMINARIOS</h3>
         <div class="cursos-cortos">
         <p>
@@ -82,7 +78,7 @@
         3) MOSAIQUISMO EN VITROFUSION: TRABAJOS CON PEQUEÑOS MOSAICOS.
       </p>
         </div>
-      </div>
+      </section>
     </main>
 
     <!-- FOOTER -->
@@ -104,7 +100,7 @@
         </div>
       </div>
     </footer>
-
+    <!--LIBRERIA BOOTSTRAP-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
