--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -111,7 +111,7 @@
     
     <!-- FOOTER -->
     
-    <footer class="footer">
+    <footer class="footer-contacto">
       <div class="footer-container">
         <div class="footer-redes">
           <a href=""><img src="../icons/facebook.svg" alt=""></a>
