--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -89,7 +89,7 @@
   
     <!-- FOOTER -->
     
-    <footer class="footer">
+    <footer class="footer-cursos">
       <div class="footer-container">
         <div class="footer-redes">
           <a href=""><img src="../icons/facebook.svg" alt=""></a>
