--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/style.css" />
     <!--FONTAWESOME-->
     <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
+    <!--ANIMACIONES-->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Nosotros</title>
   </head>
   <body>
