--- a/pages/comunicate.html
+++ b/pages/comunicate.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css" />
+    <!--ANIMACIONES-->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--FONTAWESOME-->
     <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Comunicate</title>
-    <script
-      src="https://kit.fontawesome.com/b0070f10f4.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <!-- HEADER -->
