--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css" />
+    <!--ANIMACIONES-->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--FONTAWESOME-->
     <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Cursos</title>
   </head>
   <body>
@@ -34,14 +36,14 @@
               <a class="nav-link active" href="#">Cursos</a>
               <a class="nav-link" href="../pages/modalidades.html">Modalidades</a>
               <a class="nav-link" href="../pages/comunicate.html">Comunicate</a>
-            </div>
+            </div>tit
           </div>
         </div>
       </nav>
     </header>
     <!-- MAIN CURSOS -->
     <main class="main">
-      <section class="titulo2">
+      <section class="titulo2 animate__animated animate__shakeY">
         <h1 class="card-title">AB VITRO</h1>
         <h2 class="card-subtitle mb-2 text-muted">
           Taller de oficios y artes múltiples</h2>
