--- a/pages/modalidades.html
+++ b/pages/modalidades.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css" />
+    <!--ANIMACIONES-->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--FONTAWESOME-->
     <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Modalidades</title>
   </head>
   <body>
