--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css" />
     <!--FONTAWESOME-->
     <script src="https://kit.fontawesome.com/b0070f10f4.js"crossorigin="anonymous"></script>
     <!--ANIMACIONES-->
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!--STYLE CSS-->
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Nosotros</title>
   </head>
   <body>
