--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Taller de vitrofusion y artes multiples">
+    <meta name="keywords" content="vitrofusion, cursos, mosaiquismo, joyeria, macrame">
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!--FONTAWESOME-->
